--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "uncensored and anonymous messaging service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist/ && babel ./src/ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "npm run build && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,14 @@
   },
   "homepage": "https://github.com/terazoid/arcane-broadcaster#readme",
   "dependencies": {
+    "crc-32": "^1.2.0",
     "express": "^4.16.2",
-    "jimp": "^0.2.28"
+    "jimp": "^0.2.28",
+    "lodash": "^4.17.5"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "rimraf": "^2.6.2"
   }
 }
