--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/terazoid/arcane-broadcaster#readme",
   "dependencies": {
+    "better-sqlite3": "^4.1.0",
     "crc-32": "^1.2.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.2",
     "jimp": "^0.2.28",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "node-rsa": "^0.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
