--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.16.2",
     "jimp": "^0.2.28",
     "lodash": "^4.17.5",
-    "node-rsa": "^0.4.2"
+    "node-rsa": "^0.4.2",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
