--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.2",
     "jimp": "^0.2.28",
     "lodash": "^4.17.5",
+    "multer": "^1.3.0",
     "sha1": "^1.1.1",
     "valid-url": "^1.0.9"
   },
