--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/terazoid/arcane-broadcaster#readme",
   "dependencies": {
+    "async": "^2.6.0",
+    "axios": "^0.18.0",
     "better-sqlite3": "^4.1.0",
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
     "crc-32": "^1.2.0",
     "dateformat": "^3.0.3",
     "ejs": "^2.6.1",
