--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-logs
-*.log
-
-node_modules
-
-#IDE
-.idea/
-
-dist/
-app.db
-config.json
+.DS_Store
+dist/electron/*
+dist/web/*
+build/*
+!build/icons
+node_modules/
+npm-debug.log
+npm-debug.log.*
+thumbs.db
+!.gitkeep
