--- a/package.json
+++ b/package.json
@@ -1,42 +1,80 @@
 {
   "name": "arcane-broadcaster",
-  "version": "1.0.0",
-  "description": "uncensored and anonymous messaging service",
-  "main": "index.js",
+  "productName": "arcane-broadcaster",
+  "version": "0.0.0",
+  "author": "terazoid <terazoid@gmail.com>",
+  "description": " ",
+  "license": null,
+  "main": "./dist/electron/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist/ && babel ./src/ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && node dist/index.js"
+    "build": "node .electron-vue/build.js",
+    "build:darwin": "cross-env BUILD_TARGET=darwin node .electron-vue/build.js",
+    "build:linux": "cross-env BUILD_TARGET=linux node .electron-vue/build.js",
+    "build:mas": "cross-env BUILD_TARGET=mas node .electron-vue/build.js",
+    "build:win32": "cross-env BUILD_TARGET=win32 node .electron-vue/build.js",
+    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
+    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
+    "dev": "node .electron-vue/dev-runner.js",
+    "pack": "npm run pack:main && npm run pack:renderer",
+    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
+    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
+    "postinstall": ""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/terazoid/arcane-broadcaster.git"
-  },
-  "author": "terazoid",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/terazoid/arcane-broadcaster/issues"
-  },
-  "homepage": "https://github.com/terazoid/arcane-broadcaster#readme",
   "dependencies": {
-    "async": "^2.6.0",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/vue-fontawesome": "^0.0.22",
+    "async": "^2.6.1",
     "axios": "^0.18.0",
-    "better-sqlite3": "^4.1.0",
-    "body-parser": "^1.18.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "cheerio": "^1.0.0-rc.2",
     "crc-32": "^1.2.0",
     "dateformat": "^3.0.3",
-    "ejs": "^2.6.1",
-    "express": "^4.16.2",
+    "depd": "^1.1.2",
     "jimp": "^0.2.28",
-    "lodash": "^4.17.5",
-    "multer": "^1.3.0",
-    "sha1": "^1.1.1",
-    "valid-url": "^1.0.9"
+    "lodash": "^4.17.10",
+    "nedb": "^1.8.0",
+    "node-sha1": "^1.0.1",
+    "valid-url": "^1.0.9",
+    "vue": "^2.3.3",
+    "vue-electron": "^1.0.6",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "rimraf": "^2.6.2"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babili-webpack-plugin": "^0.1.2",
+    "cfonts": "^1.1.3",
+    "chalk": "^2.1.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.4",
+    "del": "^3.0.0",
+    "devtron": "^1.4.0",
+    "electron": "^1.7.5",
+    "electron-debug": "^1.4.0",
+    "electron-devtools-installer": "^2.2.0",
+    "electron-packager": "^8.5.0",
+    "electron-rebuild": "^1.1.3",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "multispinner": "^0.2.1",
+    "node-loader": "^0.6.0",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^13.0.5",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.2",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
