--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "node-loader": "^0.6.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
+    "vue-devtools": "^4.1.4",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.1",
