--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "^0.0.22",
+    "aes-js": "^3.1.1",
     "async": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
@@ -35,9 +36,11 @@
     "jimp": "^0.2.28",
     "lodash": "^4.17.10",
     "nedb": "^1.8.0",
+    "node-rsa": "^1.0.0",
     "node-sha1": "^1.0.1",
     "valid-url": "^1.0.9",
     "vue": "^2.3.3",
+    "vue-async-computed": "^3.3.1",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
