--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aes-js": "^3.1.1",
     "async": "^2.6.1",
     "axios": "^0.18.0",
+    "bbcode-parser": "^1.0.10",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cheerio": "^1.0.0-rc.2",
     "crc-32": "^1.2.0",
